pom adjustment and client module in basic